--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -320,6 +320,92 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+	"mmorpg.affix.archeologists": "Archeologist's",
+	"mmorpg.affix.armored_mobs": "Armored",
+	"mmorpg.affix.azure": "Azure",
+	"mmorpg.affix.boundless": "Boundless",
+	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
+	"mmorpg.affix.chaos_ele_mobs": "Of Diseases",
+	"mmorpg.affix.chaos_res": "Of the Snake",
+	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
+	"mmorpg.affix.chaos_wep_dmg_dun": "Poisonous",
+	"mmorpg.affix.crit_prefix": "Critical",
+	"mmorpg.affix.desolation": "Desolation",
+	"mmorpg.affix.energetic": "Energetic",
+	"mmorpg.affix.energy_reg": "Invirogating",
+	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
+	"mmorpg.affix.fire_ele_mobs": "Of Embers",
+	"mmorpg.affix.fire_res": "Of the Drake",
+	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
+	"mmorpg.affix.fire_wep_dmg": "Scorched",
+	"mmorpg.affix.fire_wep_dmg_dun": "Burning",
+	"mmorpg.affix.focused": "Focused",
+	"mmorpg.affix.glimmering": "Glimmering",
+	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
+	"mmorpg.affix.heal_crit_prefix": "Truthful",
+	"mmorpg.affix.heal_suff": "Of Restoration",
+	"mmorpg.affix.immortal": "Immortal",
+	"mmorpg.affix.item_both_armor": "Reinforced",
+	"mmorpg.affix.item_both_dodge": "Scaled",
+	"mmorpg.affix.item_both_ms": "Fortified",
+	"mmorpg.affix.item_flat_armor": "Reinforced",
+	"mmorpg.affix.item_flat_dodge": "Scaled",
+	"mmorpg.affix.item_flat_ms": "Fortified",
+	"mmorpg.affix.item_perc_armor": "Reinforced",
+	"mmorpg.affix.item_perc_dodge": "Scaled",
+	"mmorpg.affix.item_perc_ms": "Fortified",
+	"mmorpg.affix.life_on_hit_dun": "Of Vampires",
+	"mmorpg.affix.lightning_res": "Of the Yeti",
+	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
+	"mmorpg.affix.mana_reg": "Soothing",
+	"mmorpg.affix.mana_thief": "Mana Thief's",
+	"mmorpg.affix.ms_reg": "Stabilizing",
+	"mmorpg.affix.of_affluence": "Of Affluence",
+	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
+	"mmorpg.affix.of_brutality": "Of Brutality",
+	"mmorpg.affix.of_consumption": "Of Consumption",
+	"mmorpg.affix.of_devastation": "Of Devastation",
+	"mmorpg.affix.of_energy": "Of Energy",
+	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
+	"mmorpg.affix.of_gluttony": "Of Gluttony",
+	"mmorpg.affix.of_less_cd": "Of Repetition",
+	"mmorpg.affix.of_mana": "Of Mana",
+	"mmorpg.affix.of_pene": "Of Penetration",
+	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
+	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
+	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
+	"mmorpg.affix.of_the_sky": "Of the Sky",
+	"mmorpg.affix.of_the_titan": "Of the Titan",
+	"mmorpg.affix.of_the_troll": "Of The Troll",
+	"mmorpg.affix.of_the_wind": "Of the Wind",
+	"mmorpg.affix.of_treasure": "Of Treasure",
+	"mmorpg.affix.of_vampirism": "Of Vampirism",
+	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
+	"mmorpg.affix.physical_wep_dmg_dun": "Tyrannical",
+	"mmorpg.affix.precise": "Precise",
+	"mmorpg.affix.promised": "Promised",
+	"mmorpg.affix.scavanger": "Scavanger",
+	"mmorpg.affix.seraphim": "Seraphim's",
+	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
+	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
+	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
+	"mmorpg.affix.true_hit": "True Hit",
+	"mmorpg.affix.vampiric": "Vampiric",
+	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
+	"mmorpg.affix.water_ele_mobs": "Of Frost",
+	"mmorpg.affix.water_res": "Of the Storm",
+	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
+	"mmorpg.affix.water_wep_dmg": "Chilled",
+	"mmorpg.affix.water_wep_dmg_dun": "Freezing",
+	"mmorpg.affix.wep_item_both": "Miserable",
+	"mmorpg.affix.wep_item_flat": "Deadly",
+	"mmorpg.affix.wep_item_perc": "Cruel",
+
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+
 "_comment": " [CATEGORY]: SPELLS - NAMES",
 
 	"": "mmorpg.asc_class.warlock",
@@ -480,92 +566,6 @@
 "_comment": " [CATEGORY]: SPELLS - NAMES",
 
 
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-	"mmorpg.affix.archeologists": "Archeologist's",
-	"mmorpg.affix.armored_mobs": "Armored",
-	"mmorpg.affix.azure": "Azure",
-	"mmorpg.affix.boundless": "Boundless",
-	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
-	"mmorpg.affix.chaos_ele_mobs": "Of Diseases",
-	"mmorpg.affix.chaos_res": "Of the Snake",
-	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
-	"mmorpg.affix.chaos_wep_dmg_dun": "Poisonous",
-	"mmorpg.affix.crit_prefix": "Critical",
-	"mmorpg.affix.desolation": "Desolation",
-	"mmorpg.affix.energetic": "Energetic",
-	"mmorpg.affix.energy_reg": "Invirogating",
-	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
-	"mmorpg.affix.fire_ele_mobs": "Of Embers",
-	"mmorpg.affix.fire_res": "Of the Drake",
-	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg_dun": "Burning",
-	"mmorpg.affix.focused": "Focused",
-	"mmorpg.affix.glimmering": "Glimmering",
-	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
-	"mmorpg.affix.heal_crit_prefix": "Truthful",
-	"mmorpg.affix.heal_suff": "Of Restoration",
-	"mmorpg.affix.immortal": "Immortal",
-	"mmorpg.affix.item_both_armor": "Reinforced",
-	"mmorpg.affix.item_both_dodge": "Scaled",
-	"mmorpg.affix.item_both_ms": "Fortified",
-	"mmorpg.affix.item_flat_armor": "Reinforced",
-	"mmorpg.affix.item_flat_dodge": "Scaled",
-	"mmorpg.affix.item_flat_ms": "Fortified",
-	"mmorpg.affix.item_perc_armor": "Reinforced",
-	"mmorpg.affix.item_perc_dodge": "Scaled",
-	"mmorpg.affix.item_perc_ms": "Fortified",
-	"mmorpg.affix.life_on_hit_dun": "Of Vampires",
-	"mmorpg.affix.lightning_res": "Of the Yeti",
-	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
-	"mmorpg.affix.mana_reg": "Soothing",
-	"mmorpg.affix.mana_thief": "Mana Thief's",
-	"mmorpg.affix.ms_reg": "Stabilizing",
-	"mmorpg.affix.of_affluence": "Of Affluence",
-	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
-	"mmorpg.affix.of_brutality": "Of Brutality",
-	"mmorpg.affix.of_consumption": "Of Consumption",
-	"mmorpg.affix.of_devastation": "Of Devastation",
-	"mmorpg.affix.of_energy": "Of Energy",
-	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
-	"mmorpg.affix.of_gluttony": "Of Gluttony",
-	"mmorpg.affix.of_less_cd": "Of Repetition",
-	"mmorpg.affix.of_mana": "Of Mana",
-	"mmorpg.affix.of_pene": "Of Penetration",
-	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
-	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
-	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
-	"mmorpg.affix.of_the_sky": "Of the Sky",
-	"mmorpg.affix.of_the_titan": "Of the Titan",
-	"mmorpg.affix.of_the_troll": "Of The Troll",
-	"mmorpg.affix.of_the_wind": "Of the Wind",
-	"mmorpg.affix.of_treasure": "Of Treasure",
-	"mmorpg.affix.of_vampirism": "Of Vampirism",
-	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
-	"mmorpg.affix.physical_wep_dmg_dun": "Tyrannical",
-	"mmorpg.affix.precise": "Precise",
-	"mmorpg.affix.promised": "Promised",
-	"mmorpg.affix.scavanger": "Scavanger",
-	"mmorpg.affix.seraphim": "Seraphim's",
-	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
-	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
-	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
-	"mmorpg.affix.true_hit": "True Hit",
-	"mmorpg.affix.vampiric": "Vampiric",
-	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
-	"mmorpg.affix.water_ele_mobs": "Of Frost",
-	"mmorpg.affix.water_res": "Of the Storm",
-	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg_dun": "Freezing",
-	"mmorpg.affix.wep_item_both": "Miserable",
-	"mmorpg.affix.wep_item_flat": "Deadly",
-	"mmorpg.affix.wep_item_perc": "Cruel",
-
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-
 "_comment": " [CATEGORY]: RARITIES - NAMES",
 
 	"mmorpg.rarity..common": "Common",
@@ -578,6 +578,54 @@
 	"mmorpg.rarity..unique": "Unique",
 
 "_comment": " [CATEGORY]: RARITIES - NAMES",
+
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
+	"mmorpg.currency.orb_of_linking": "Orb of Linking",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
@@ -611,54 +659,6 @@
 	"mmorpg.ailment.poison": "Poison",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
-
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
-	"mmorpg.currency.orb_of_linking": "Orb of Linking",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1043,7 +1043,7 @@
 	"mmorpg.stat.increased_quantity": "Item Find",
 	"mmorpg.stat.int_dmg": "Spell Damage",
 	"mmorpg.stat.int_dmg_received": "Spell Damage Received",
-	"mmorpg.stat.intelligence": "intelligence",
+	"mmorpg.stat.intelligence": "Intelligence",
 	"mmorpg.stat.jewel_socket": "Jewel Sockets",
 	"mmorpg.stat.leech_per_sec": "Total Leech Per Second",
 	"mmorpg.stat.lifesteal": "Lifesteal",
@@ -1170,7 +1170,7 @@
 	"mmorpg.stat.staff_spell_spell_dmg": "Staff Spell Damage",
 	"mmorpg.stat.str_dmg": "Melee Damage",
 	"mmorpg.stat.str_dmg_received": "Melee Damage Received",
-	"mmorpg.stat.strength": "Strength",
+	"mmorpg.stat.strength": "strength",
 	"mmorpg.stat.summon_cdr": "Summon Spell Cooldown Reduction",
 	"mmorpg.stat.summon_damage": "Summon Damage",
 	"mmorpg.stat.summon_duration": "Summon Duration",
