--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -378,21 +378,21 @@
 	"mmorpg.spell.fire_trap": "Fire Trap",
 	"mmorpg.spell.fireball": "Fire Ball",
 	"mmorpg.spell.flame_strike": "Flame Strike",
-	"mmorpg.spell.frost_flower": "Frost Flower",
+	"mmorpg.spell.frost_flower": "Frost Totem",
 	"mmorpg.spell.frost_nova": "Frost Nova",
 	"mmorpg.spell.frost_trap": "Frost Trap",
 	"mmorpg.spell.frostball": "Ice Shard",
 	"mmorpg.spell.frozen_orb": "Frozen orb",
 	"mmorpg.spell.gale_wind": "Gale Wind",
 	"mmorpg.spell.gong_strike": "Gong Strike",
-	"mmorpg.spell.healing_aura": "Healing Wave",
+	"mmorpg.spell.healing_aura": "Healing Aria",
 	"mmorpg.spell.heart_of_ice": "Heart of Ice",
 	"mmorpg.spell.hunter_potion": "Hunter's Potion",
 	"mmorpg.spell.ice_comet": "Ice Comet",
 	"mmorpg.spell.lightning_nova": "Lightning Nova",
 	"mmorpg.spell.lightning_spear": "Lightning Spear",
 	"mmorpg.spell.mage_circle": "Mage Circle",
-	"mmorpg.spell.magma_flower": "Magma Flower",
+	"mmorpg.spell.magma_flower": "Magma Totem",
 	"mmorpg.spell.meteor": "Meteor",
 	"mmorpg.spell.meteor_arrow": "Meteor Arrow",
 	"mmorpg.spell.minion_explosion": "Minion Explosion",
@@ -581,54 +581,6 @@
 "_comment": " [CATEGORY]: RARITIES - NAMES",
 
 
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_linking": "Orb of Linking",
-	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"effect.mmorpg.beneficial.10": "Vigor",
@@ -660,6 +612,54 @@
 	"mmorpg.ailment.poison": "Poison",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
+
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.orb_of_linking": "Orb of Linking",
+	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1072,21 +1072,21 @@
 	"mmorpg.stat.learn_fire_trap": "Learn Fire Trap",
 	"mmorpg.stat.learn_fireball": "Learn Fire Ball",
 	"mmorpg.stat.learn_flame_strike": "Learn Flame Strike",
-	"mmorpg.stat.learn_frost_flower": "Learn Frost Flower",
+	"mmorpg.stat.learn_frost_flower": "Learn Frost Totem",
 	"mmorpg.stat.learn_frost_nova": "Learn Frost Nova",
 	"mmorpg.stat.learn_frost_trap": "Learn Frost Trap",
 	"mmorpg.stat.learn_frostball": "Learn Ice Shard",
 	"mmorpg.stat.learn_frozen_orb": "Learn Frozen orb",
 	"mmorpg.stat.learn_gale_wind": "Learn Gale Wind",
 	"mmorpg.stat.learn_gong_strike": "Learn Gong Strike",
-	"mmorpg.stat.learn_healing_aura": "Learn Healing Wave",
+	"mmorpg.stat.learn_healing_aura": "Learn Healing Aria",
 	"mmorpg.stat.learn_heart_of_ice": "Learn Heart of Ice",
 	"mmorpg.stat.learn_hunter_potion": "Learn Hunter's Potion",
 	"mmorpg.stat.learn_ice_comet": "Learn Ice Comet",
 	"mmorpg.stat.learn_lightning_nova": "Learn Lightning Nova",
 	"mmorpg.stat.learn_lightning_spear": "Learn Lightning Spear",
 	"mmorpg.stat.learn_mage_circle": "Learn Mage Circle",
-	"mmorpg.stat.learn_magma_flower": "Learn Magma Flower",
+	"mmorpg.stat.learn_magma_flower": "Learn Magma Totem",
 	"mmorpg.stat.learn_meteor": "Learn Meteor",
 	"mmorpg.stat.learn_meteor_arrow": "Learn Meteor Arrow",
 	"mmorpg.stat.learn_minion_explosion": "Learn Minion Explosion",
@@ -1727,7 +1727,7 @@
 	"spell.desc.fire_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§c☀ Fire§7 Damage in area around itself.",
 	"spell.desc.fireball": "Throw out a ball of fire, dealing [calc:fireball] §c☀ Fire§7 Damage",
 	"spell.desc.flame_strike": "Strike enemies in front for [calc:flame_strike] §c☀ Fire§7 Damage",
-	"spell.desc.frost_flower": "Summon a frost flower that deals [calc:flower_flower] §b☀ Cold§7 Damage in an area every second.",
+	"spell.desc.frost_flower": "Summon a frost totem that deals [calc:flower_flower] §b☀ Cold§7 Damage in an area every second.",
 	"spell.desc.frost_nova": "Explode with frost around you, dealing [calc:frost_nova] §b☀ Cold§7 Damage to nearby enemies.",
 	"spell.desc.frost_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§b☀ Cold§7 Damage in area around itself.",
 	"spell.desc.frostball": "Throw out a shard of ice, dealing [calc:iceball] §b☀ Cold§7 Damage",
@@ -1741,7 +1741,7 @@
 	"spell.desc.lightning_nova": "Deal [calc:lightning_nova] §e☀ Lightning§7 Damage to nearby enemies.",
 	"spell.desc.lightning_spear": "Throw out an electric spear, dealing [calc:lightning_spear] §e☀ Lightning§7 Damage",
 	"spell.desc.mage_circle": "Summon a Magic Circle. Standing in it increases your damage. After a certain duration you will be teleported to its location.",
-	"spell.desc.magma_flower": "Summon a flaming flower that deals [calc:magma_flower]§c☀ Fire§7 Damage in an area every second.",
+	"spell.desc.magma_flower": "Summon a flaming totem that deals [calc:magma_flower]§c☀ Fire§7 Damage in an area every second.",
 	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] §c☀ Fire§7 Damage in an area.",
 	"spell.desc.meteor_arrow": "Shoots an arrow that deals [calc:meteor] §6☀ Physical§7 Damage and summons a meteor that deals [calc:meteor] §c☀ Fire§7 Damage",
 	"spell.desc.nature_balm": "Gives buff to nearby allies.",
